Remove quadradic behavior in shorten live ranges.
Bug: 143457380
Change-Id: I72f45b7e4cfaeb18a7a187886ea662a4454b0045